# oi

./: .bandit  .coverage  .gitignore  .importlinter  .pylintrc  00-check-apt-sources.sh  Dockerfile  IMPLEMENTATION_SUMMARY.md  LAUNCH_DASHBOARD.md  MERMAID_QUICK_REFERENCE.md  MERMAID_SEQUENCE_DIAGRAM_ANALYSIS.md  MERMAID_SEQUENCE_DIAGRAM_IMPROVEMENT.md  MERMAID_SYNTAX_REFERENCE.md  MERMAID_TEST_REPORT.md  README.md  REFACTORING_PLAN.md  config.yaml  deploy.py  docker-compose.test.yml  main.py  oi.code-workspace  pyproject.toml  requirements.txt  secret.json  secret.json.example  setup.sh  setup_venv.sh  test_mermaid_investigation.py  test_mermaid_libs.py  test_mermaid_py.py  test_pymermaid_suite.py
.github/: copilot-instructions.md
.github/agents/: it.agent.md
.github/workflows/: architecture.yml  ci-cd.yml  uml-generation.yml
architecture_docs/: README.md
depancecmd/: 00-check-apt-sources.sh  01-update-upgrade.sh  02-install-base.sh  03-install-python.sh  04-install-node.sh  05-install-docker.sh  06-install-suricata.sh  07-install-pigpio.sh  08-install-sqlite.sh  09-configure-network.sh  10-install-backend-deps.sh  11-install-frontend-deps.sh
deploy/: ids-dashboard.service  ids2-agent.service  install.sh  reset.sh  start_agent.sh  suricata.service
docker/: docker-compose.yml
docker_monolithic/: Dockerfile
docs/: DEPLOYMENT.md  PIPELINE.md  PIPELINE_SIMPLE.md  SECRETS.md  TAILSCALE_SETUP.md  USE_CASES.md
docs/uml/: INDEX.md  README.md  metrics_history.json
frontend/: package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/components/ui/: button.tsx
mermaid/: communication.mmd
mermaid_generated/: class_diagram.mmd  flowchart.mmd  graph_diagram.mmd  sequence_diagram.mmd  state_diagram.mmd
python_env/: main.py  requirements.txt
python_env/modules/: __init__.py  aws_manager.py  base_component.py  connectivity_async.py  docker_manager.py  git_workflow.py  mermaid_generator.py  metrics_server.py  resource_controller.py  suricata_manager.py  suricata_rules_manager.py  vector_manager.py  web_interface_manager.py
python_env/tests/: run_tests.py  test_api_functionality.py  test_aws_connectivity.py  test_aws_opensearch_domain.py  test_base_component.py  test_config_manager.py  test_connectivity_async.py  test_docker_manager.py  test_main.py  test_metrics_server.py  test_pipeline_integration.py  test_resource_controller.py
scripts/: README.md  README_TAILSCALE_MONITOR.md  actions_secrets.map.example  analyze_architecture.py  cleanup.sh  code_quality.py  deploy_dashboard.sh  example_full_deployment.py  generate_architecture.py  generate_uml.py  gh_actions_bootstrap.sh  gh_actions_sync_secrets.sh  gh_codespaces_set_secrets.sh  improve_pipeline.py  manage_infrastructure.py  tailnet_monitor.py  tailscale_mesh_monitor.py  tailscale_monitor.py  tailscale_network_monitor.py  tailscale_setup.sh  tailscale_verify.py
src/ids/: __init__.py
src/ids/app/: __init__.py  api_status.py  container.py  decorateurs.py  deploy_helper.py  pipeline_status.py  supervisor.py
src/ids/composants/: __init__.py  base.py  connectivity.py  docker_manager.py  metrics_collector.py  metrics_server.py  resource_controller.py  tailnet_monitor.py  tailscale_manager.py  tailscale_monitor.py  vector_manager.py
src/ids/config/: loader.py  models.py
src/ids/dashboard/: __init__.py  ai_healing.py  app.py  load_secrets.py  main.py  mirroring.py  network.py  setup.py  tailscale.py
src/ids/datastructures/: __init__.py  models.py
src/ids/deploy/: opensearch_domain.py  pi_uploader.py
src/ids/domain/: __init__.py  alerte.py  configuration.py  entities.py  exceptions.py  metriques.py  tailscale.py
src/ids/infrastructure/: __init__.py  alert_store.py  aws_manager.py  logger.py  opensearch_client.py  redis_client.py
src/ids/interfaces/: __init__.py  alerte_source.py  config.py  config_manager.py  gestionnaire.py  persistance.py
src/ids/managers/: __init__.py  opensearch_manager.py  raspberry_pi_manager.py  tailscale_manager.py
src/ids/monitoring/: __init__.py  tailnet_monitor.py
src/ids/storage/: __init__.py  database.py
src/ids/suricata/: __init__.py  config.py  manager.py  parser.py
src/ids/tailscale/: __init__.py  api_client.py  connectivity.py  interfaces.py  models.py  monitor.py  visualizer.py
suricata/: suricata.yaml
tests/: conftest.py  pytest.ini
tests/fixtures/: __init__.py  alerte_fixtures.py  config_fixtures.py  container_fixtures.py  infra_fixtures.py
tests/integration/: test_aws_connectivity.py  test_deploy_pi.py  test_state_machine.py
tests/unit/: test_config_loader.py  test_config_validator.py  test_domain.py  test_generate_architecture.py  test_opensearch_client.py  test_pi_uploader.py
vector/: vector.toml
webapp/backend/: Dockerfile.test  README.md  config.yaml  deploy.py  main.py  requirements.txt
webapp/backend/deploy/: deploy_pi.sh  enable_agent.sh  network_eth0_only.sh  push_to_pi.sh  stop_agent.sh  suricata.service  tailscale.service
webapp/backend/docker/: .env  prometheus.yml
webapp/backend/docker/fastapi/: Dockerfile
webapp/backend/scripts/: actions_secrets.map.example  analyze_architecture.py  configure_infrastructure.py  dashboard_setup.sh  example_full_deployment.py  generate_architecture.py  generate_uml.py  gh_actions_bootstrap.sh  gh_actions_run.sh  gh_actions_sync_secrets.sh  gh_codespaces_set_secrets.sh  improve_pipeline.py  manage_infrastructure.py  tailscale_monitor.py  tailscale_verify.py
webapp/backend/src/ids/: __init__.py
webapp/backend/tests/: conftest.py
webapp/backend/tests/fixtures/: __init__.py  alerte_fixtures.py  config_fixtures.py  container_fixtures.py  infra_fixtures.py
webapp/backend/tests/integration/: test_aws_connectivity.py  test_deploy_pi.py  test_state_machine.py
webapp/backend/tests/unit/: test_aws_opensearch_manager.py  test_config_loader.py  test_config_validator.py  test_deploy_helper.py  test_deploy_uploader.py  (+3 more)
webapp/db/: __init__.py
webapp/db/storage/: crud.py  models.py  schemas.py
webapp/frontend/: index.html  package-lock.json
webapp/frontend/src/: App.tsx
(+34 files in other folders)
