[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ids-agent"
version = "2.0.0"
description = "IDS Agent for Raspberry Pi - Security monitoring with Suricata"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SIXT R&D Team", email = "dev@sixt.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
keywords = ["ids", "security", "suricata", "raspberry-pi", "monitoring"]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "punq>=0.6",
    "aiohttp>=3.8",
    "redis>=4.5",
    "boto3>=1.26",
    "requests>=2.28",
    "requests-aws4auth>=1.2",
    "opensearch-py>=2.4.0",
    "toml>=0.10",
    "prometheus-client>=0.17",
    "python-json-logger>=2.0",
    "dataclasses-json>=0.5.14",
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
    "bandit>=1.7",
    "pylint>=3.0",
    "safety>=2.3",
]

[project.scripts]
ids-agent = "ids.app.supervisor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests (isolated)",
    "integration: Integration tests",
    "aws: Tests requiring AWS connectivity",
    "state_machine: Tests for state machine transitions",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/ids"]
branch = true
